--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
     <!-- Header -->
-    <header class="bg-primaryColor fixed top-0 left-0 w-full z-50">
+    <header class="bg-primaryColor fixed top-0 left-0 w-full z-50 ">
         <nav class="container relative h-14 flex justify-between items-center ">
             <div>
                 <a href="#" class="text-2xl uppercase font-oswald">Bur<span class="text-secondaryColor ">ger</span></a>
@@ -58,19 +58,22 @@
     <main>
         <section id="home">
             <div class="container flex flex-col items-center gap-10 md:flex-row md:w-4/5 md:mx-auto">
-                <div class="mx-auto md:w-2/4">
-                    <img src="./img/home-image.png" alt="home burger image" class="w-60 md:w-80">
+                <div class="mx-auto md:basis-1/2 lg:basis-2/5 animate-movingY">
+                    <img src="./img/home-image.png" alt="home burger image" class="w-60 md:w-10/12">
                 </div>
-                <div class="text-center md:w-2/4 md:text-left ">
+                <div class="text-center md:basis-1/2 md:text-start lg:basis-3/5 ">
                     <h1 class="home__title">
                         Happy tummy with tasty burgers
                     </h1>
                     <!-- straight line div -->
                     <div class="separator mx-auto md:mx-0"></div>
-                    <p class="paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum facilis quod enim soluta quidem?
-                        Suscipit itaque officia voluptatibus quia quibusdam explicabo laboriosam, molestias reiciendis,
-                        </p>
-                    <div class="text-base flex items-center justify-center gap-4 py-10">
+                    <p class="paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum facilis quod
+                        enim soluta quidem?
+                        Suscipit itaque officia voluptatibus quia quibusdam explicabo laboriosam, molestias
+                        reiciendis,Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, maxime quisquam quam
+                        temporibus soluta nemo repellendus earum nisi distinctio recusandae!
+                    </p>
+                    <div class="text-base flex items-center justify-center gap-4 py-10 md:justify-start md:gap-20">
                         <div class="text-center ">
                             <i class="fa-solid fa-utensils text-secondaryColor text-4xl"></i>
                             <br>
@@ -91,6 +94,63 @@
                 </div>
             </div>
         </section>
+
+        <!-- category section -->
+
+        <section id="category">
+
+            <div class="container flex flex-col gap-5 md:flex-row">
+                <!-- card 1 -->
+
+                <div class="bg-secondaryColor flex py-3 rounded-lg overflow-hidden md:flex-1">
+                    <div class="basis-1/3 relative">
+                        <img src="img/burger-1.png" alt="" class="absolute w-38 -bottom-4 -left-4">
+                    </div>
+                    <div>
+                        <div class="mb-2">
+                            <h4 class="card__title">FOOD</h4>
+                            <p class="text-xs">Lorem ipsum dolor sit.</p>
+                        </div>
+
+                        <a href="#" class="text-blackColor cursor-pointer">Buy online</a>
+                    </div>
+                </div>
+                <!-- card 2 -->
+
+                <div class="bg-redColor flex py-3 rounded-lg overflow-hidden md:flex-1">
+                    <div class="basis-1/3 relative">
+                        <img src="img/snack-1.png" alt="" class="absolute w-38 -bottom-4 -left-4">
+                    </div>
+                    <div>
+                        <div class="mb-2">
+                            <h4 class="card__title">FOOD</h4>
+                            <p class="text-xs">Lorem ipsum dolor sit.</p>
+                        </div>
+
+                        <a href="#" class="text-secondaryColor cursor-pointer">Buy online</a>
+                    </div>
+                </div>
+                <!-- card 3 -->
+
+                <div class="bg-greenColor flex py-3 rounded-lg overflow-hidden md:flex-1">
+                    <div class="basis-1/3 relative">
+                        <img src="img/beverage-2.png" alt="" class="absolute w-38 -bottom-4 -left-4">
+                    </div>
+                    <div>
+                        <div class="mb-2">
+                            <h4 class="card__title">FOOD</h4>
+                            <p class="text-xs">Lorem ipsum dolor sit.</p>
+                        </div>
+
+                        <a href="#" class="text-secondaryColor cursor-pointer">Buy online</a>
+                    </div>
+                </div>
+
+            </div>
+
+        </section>
+
+
     </main>
 
 
