--- a/index.html
+++ b/index.html
@@ -150,6 +150,33 @@
 
         </section>
 
+        <!-- promo section -->
+        <section id="promo">
+            <div class="container flex flex-col gap-5 lg:gap-10 lg:flex-row">
+                <!-- card 1 -->
+                <div class="bg-primaryColorLight first-line:flex flex-col p-5 rounded-lg md:flex-row md:items-center lg:flex-row-reverse lg:flex-1 ">
+                    <img src="img/promo-1.png" alt="" class="w-40 mx-auto hover:animate-movingY md:mx-5">
+                    <div class="space-y-2 pt-5 md:pt-0">
+                        <p class="text-xs text-secondaryColor">Payday promo</p>
+                        <h3 class="card__title">GET A 10% DISCOUNT ON PAYDAY WEEK</h3>
+                        <p class="paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos, dolorem?</p>
+                        <a href="#" class="text-xs text-secondaryColor">Buy Online</a>
+                    </div>
+                </div>
+                <div class="bg-primaryColorLight first-line:flex flex-col p-5 rounded-lg md:flex-row md:items-center lg:flex-row-reverse lg:flex-1 ">
+                    <img src="img/promo-2.png" alt="" class="w-40 mx-auto hover:animate-movingY md:mx-5">
+                    <div class="space-y-2 pt-5 md:pt-0">
+                        <p class="text-xs text-secondaryColor">Payday promo</p>
+                        <h3 class="card__title">GET A 10% DISCOUNT ON PAYDAY WEEK</h3>
+                        <p class="paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos, dolorem?</p>
+                        <a href="#" class="text-xs text-secondaryColor">Buy Online</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+
 
     </main>
 
