--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
     <!-- Header -->
     <header class="bg-primaryColor fixed top-0 left-0 w-full z-50 ">
-        <nav class="container relative h-14 flex justify-between items-center ">
+        <nav class="container relative h-14 flex justify-between items-center ease-in-out duration-150">
             <div>
                 <a href="#" class="text-2xl uppercase font-oswald">Bur<span class="text-secondaryColor ">ger</span></a>
             </div>
